# ogito

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PRD.md  QWEN.md  README.md  ROADMAP.md  Roadmap.md  SECURITY.md  build.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsdown.config.ts
.github/workflows/: crate.yml  npm-release.yml  npm.yml  release-ubuntu.yml  release.yml
docs/: index.html
npm/: index.ts  install.ts  run.ts
package/: index.ts
repokit/: Cargo.toml
script/: index.ts  pkg.ts  script.ts
src/: cli.rs  clone.rs  code.rs  file.rs  git.rs  lib.rs  main.rs  manifest.rs  mode.rs  models.rs  progress.rs  regex.rs  tui.rs
src/cmd/: add.rs  clear.rs  git.rs  list.rs  mod.rs  new.rs
src/cmd/add/: config.rs  mod.rs
src/cmd/clear/: dir.rs  mod.rs
src/cmd/list/: mod.rs
src/cmd/new/: clone.rs  local.rs  mod.rs
src/cmd/remove/: mod.rs
src/cmd/update/: mod.rs
src/fetch/: config.rs  mod.rs
src/file/: cache.rs  copy.rs  file.rs  json.rs  mod.rs  path.rs
src/models/: mod.rs  mode.rs  site.rs
src/regex/: mod.rs
src/tui/: app.rs  colors.rs  mod.rs
src/validator/: mod.rs
tests/: code_tests.rs  config_tests.rs  file_tests.rs  git_tests.rs  mode_tests.rs  regex_tests.rs  site_tests.rs
