[package]
name = "ogito"
version = "1.0.0"
edition = "2024"
authors = ["Onion-L <onionl5236@gmail.com>"]
description = "A simple and efficient Git repository cloning management tool"
license = "MIT"
repository = "https://github.com/Onion-L/ogito"
homepage = "https://github.com/Onion-L/ogito"
readme = "README.md"
keywords = ["git", "tui", "cli", "degit", "terminal"]
categories = ["command-line-utilities"]
exclude = ["node_modules/", "npm/", "target/", ".gitignore", "*.lock", "package.json", "pnpm-lock.yaml", "tsconfig.json", "tsdown.config.ts"]

[[bin]]
name = "ogito"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["cargo"] }
color-eyre = "0.6.5"
console = "0.15.11"
crossterm = "0.29.0"
dialoguer = "0.11.0"
flate2 = "1.1.2"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.11"
mime_guess = "2.0.5"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["blocking"] }
syntect = "5.2.0"
tar = "0.4.44"
tempfile = "3.20.0"
git2 = "0.20.2"
dirs = "6.0.0"
serde_json = "1.0.142"
openssl = { version = "0.10.73", features = ["vendored"] }
