[package]
name = "ogito"
version = "1.5.0"
edition = "2021"
authors = ["Onion-L <onionl5236@gmail.com>"]
description = "A simple and efficient Git repository cloning management tool"
license = "MIT"
repository = "https://github.com/Onion-L/ogito"
homepage = "https://github.com/Onion-L/ogito"
readme = "README.md"
keywords = ["git", "cli", "degit", "terminal"]
categories = ["command-line-utilities"]
exclude = [
    "node_modules/",
    "npm/",
    "target/",
    ".gitignore",
    "*.lock",
    "package.json",
    "pnpm-lock.yaml",
    "tsconfig.json",
    "tsdown.config.ts",
]

[[bin]]
name = "ogito"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["cargo"] }
color-eyre = "0.6.5"
console = "0.15.11"
dialoguer = "0.11.0"
flate2 = "1.1.2"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.11"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["blocking"] }
tar = "0.4.44"
git2 = "0.20.2"
dirs = "6.0.0"
openssl = { version = "0.10.73", features = ["vendored"] }
toml = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
fs_extra = "1.3.0"
comfy-table = "7.1.4"

[dev-dependencies]
tempfile = "3.10.1"
